[tool.poetry]
name = "zeno_backend"
version = "0.1.0"
description = ""
authors = ["Zeno"]
readme = "README.md"
packages = [{ include = "zeno_backend" }]
homepage = "https://zenoml.com"

[tool.poetry.dependencies]
aiofiles = "^23.2.1"
cognitojwt = "^1.4.1"
fastapi = "^0.103.1"
fastapi-cloudauth = "^0.4.3"
inquirer = "^3.1.2"
nest-asyncio = "^1.5.8"
pandas = "^2.1.0"
pathos = "^0.3.1"
psycopg = "^3.1.12"
python = "^3.11"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
requests = "^2.28.1"
uvicorn = "^0.23.2"
zeno-sliceline = "^0.0.1"
pyarrow = "^13.0.0"
sqlalchemy = "^2.0.21"
amplitude-analytics = "^1.1.3"
psycopg-pool = "^3.1.8"

[tool.poetry.dev-dependencies]
black = "^23.9.1"
pre-commit = "^3.4.0"
pyright = "^1.1.327"
pytest = "^7.4.1"
ruff = "^0.0.291"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
backend = "zeno_backend.server:serve"

[tool.pyright]
include = ["zeno_backend"]

[tool.ruff]
select = ["E", "F", "I", "PD", "N", "D", "T20"]

[tool.ruff.pydocstyle]
convention = "google"
