[tool.poetry]
name = "zeno_backend"
version = "0.1.0"
description = ""
authors = ["Zeno"]
readme = "README.md"
packages = [{ include = "zeno_backend" }]
homepage = "https://zenoml.com"

[tool.poetry.dependencies]
amplitude-analytics = "^1.1.4"
cognitojwt = "^1.4.1"
fastapi = "^0.110.0"
fastapi-cloudauth = "^0.4.3"
pandas = "^2.2.1"
pgpq = "^0.9.0"
psycopg = "^3.1.18"
psycopg-pool = "^3.2.1"
pyarrow = "^14.0.2"
python = "^3.11"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"
requests = "^2.28.1"
uvicorn = "^0.27.1"
zeno-sliceline = "^0.0.1"

[tool.poetry.dev-dependencies]
pre-commit = "^3.6.2"
pyright = "^1.1.351"
pytest = "^7.4.4"
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
backend = "zeno_backend.server:serve"

[tool.pyright]
include = ["zeno_backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "PD", "N", "D", "T20"]

[tool.ruff.lint.pydocstyle]
convention = "google"
