[tool.poetry]
name = "connex"
version = "0.1.0"
description = ""
authors = ["Zeno"]
readme = "README.md"
packages = [{include = "connex"}]
homepage = "https://zenoml.com"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.22.0"
fastapi = ">=0.95.1,<0.98.0"
pandas = "^2.0.2"
pydantic = "^1.10.9"
psycopg = "^3.1.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.278"
black = "^23.7.0"
httpx = "^0.24.1"
pyright = "^1.1.317"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
connex = "connex.server:serve"

[tool.pyright]
include = ["connex"]

[tool.ruff]
select = ["E", "F", "I", "PD", "N", "D"]

[tool.ruff.pydocstyle]
convention = "google"